--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
 
             <div>
                 <a href="/logout">logout</a>
+                <a href="/signUp">signup</a>
+
             </div>
             
 {% block content %}
