--- a/templates/login.html
+++ b/templates/login.html
@@ -17,6 +17,10 @@
     
         <input id="submitBTN" type="submit" name="submit" />
         
+       <p> Don't have an account? <a href="/signUp">signup</a></p>
+
+
+
     </div>
 
     </fieldset>
