--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
         <span class ="errorMessage">{{error_message}}</span>
 
         <label for = "password" >Password </label>
-        <input id="password" type="text" name="password" required/>
+        <input id="password" type="password" name="password" required/>
         <span class ="errorMessage">{{error_message}}</span>
     
     
