--- a/static/all_blogs.css
+++ b/static/all_blogs.css
@@ -35,3 +35,18 @@ li{
     display: inline-block;
     margin-left: 100px;
 }
+
+
+.user_container{
+    width: 100%;
+    background: #3399ff;
+    padding: 20px;
+}
+
+.author{
+    background: #ffe5e5;
+    padding: 5px;
+    margin-left: 35px;
+    list-style: numbers;
+
+}
